zoom hotkeys, z-index fix, combo snap crash fix

--- a/calculatorsheetbeta.css
+++ b/calculatorsheetbeta.css
@@ -104,7 +104,7 @@ textarea {
   position:absolute;
   border:5px solid #383838;
   border-radius:3px;
-  z-index:30;
+  z-index:121;
 }
 
 .colourselect {
@@ -1457,7 +1457,7 @@ textarea
 	height:325px;
 	right:140px;
 	top:0px;
-	z-index:100;
+	z-index:122;
 	text-align:center;
 	font-size:14px;
 }
@@ -3016,7 +3016,7 @@ textarea
   width:100%;
   display:block;
   position:absolute;
-  z-index:31;
+  z-index:122;
 }
 
 #popoutOverlay {
@@ -3025,7 +3025,7 @@ textarea
   display:block;
   background-color:rgba(0, 0, 0, 0.5);
   position:absolute;
-  z-index:30;
+  z-index:121;
 }
 
 #popoutShare {
